--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="pantalla" id="inicio">
         <div class="contenedor">
             <h1>🐾 SALUD PELUDA 🐾</h1>
-            <p class="subtitulo">Tu asistente de cuidado animal</p>
+            <p class="subtitulo">Tu asistente de cuidado animal - v2</p>
             <button onclick="irAPaso1()" class="boton-principal">COMENZAR</button>
         </div>
     </div>
